<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/more_menu"
        android:title=""
        android:icon="@drawable/ic_more_vert"
        app:showAsAction="always"
        >
        <menu>
            <item
                android:id="@+id/synchronise"
                android:icon="@drawable/ic_sync"
                android:title="@string/synchronise"
                 />

            <item
                android:id="@+id/disconnect"
                android:icon="@drawable/ic_exit"
                android:title="@string/log_out"
                />
        </menu>
    </item>
</menu>